Was missing lib

--- a/NativeTrainer/NativeTrainer.vcxproj
+++ b/NativeTrainer/NativeTrainer.vcxproj
@@ -28,6 +28,9 @@
     <ClInclude Include="skins.h" />
     <ClInclude Include="vehicles.h" />
   </ItemGroup>
+  <ItemGroup>
+    <Library Include="lib\ScriptHookV.lib" />
+  </ItemGroup>
   <PropertyGroup Label="Globals">
     <ProjectGuid>{8D82F34A-1D64-465B-84B1-37F89AD3D20B}</ProjectGuid>
     <Keyword>Win32Proj</Keyword>
