--- a/NativeTrainer/NativeTrainer.vcxproj.filters
+++ b/NativeTrainer/NativeTrainer.vcxproj.filters
@@ -7,6 +7,7 @@
     <ClCompile Include="menu_functions.cpp" />
     <ClCompile Include="io.cpp" />
     <ClCompile Include="vehicles.cpp" />
+    <ClCompile Include="teleportation.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="script.h" />
@@ -17,6 +18,7 @@
     <ClInclude Include="inc\nativeCaller.h" />
     <ClInclude Include="inc\types.h" />
     <ClInclude Include="menu_functions.h" />
+    <ClInclude Include="teleportation.h" />
   </ItemGroup>
   <ItemGroup>
     <Library Include="lib\ScriptHookV.lib" />
