Added ped, vehicle and release notes documents

--- a/EnhancedNativeTrainer/EnhancedNativeTrainer.vcxproj
+++ b/EnhancedNativeTrainer/EnhancedNativeTrainer.vcxproj
@@ -44,6 +44,11 @@
       <DeploymentContent>true</DeploymentContent>
     </Xml>
   </ItemGroup>
+  <ItemGroup>
+    <None Include="Documents\Enhanced Trainer Release Notes.rtf" />
+    <None Include="Documents\GTA V Peds Master.xlsm" />
+    <None Include="Documents\GTA V Vehicles Master.xlsm" />
+  </ItemGroup>
   <PropertyGroup Label="Globals">
     <ProjectGuid>{8D82F34A-1D64-465B-84B1-37F89AD3D20B}</ProjectGuid>
     <Keyword>Win32Proj</Keyword>
