--- a/EnhancedNativeTrainer/EnhancedNativeTrainer.vcxproj
+++ b/EnhancedNativeTrainer/EnhancedNativeTrainer.vcxproj
@@ -13,6 +13,9 @@
   <ItemGroup>
     <ClCompile Include="airbrake.cpp" />
     <ClCompile Include="config_io.cpp" />
+    <ClCompile Include="database.cpp" />
+    <ClCompile Include="debuglog.cpp" />
+    <ClCompile Include="inc\sqlite3\sqlite3.c" />
     <ClCompile Include="io.cpp" />
     <ClCompile Include="keyboard.cpp" />
     <ClCompile Include="main.cpp" />
@@ -28,8 +31,12 @@
   <ItemGroup>
     <ClInclude Include="airbrake.h" />
     <ClInclude Include="config_io.h" />
+    <ClInclude Include="database.h" />
+    <ClInclude Include="debuglog.h" />
     <ClInclude Include="inc\main.h" />
     <ClInclude Include="inc\nativeCaller.h" />
+    <ClInclude Include="inc\sqlite3\sqlite3.h" />
+    <ClInclude Include="inc\sqlite3\sqlite3ext.h" />
     <ClInclude Include="inc\types.h" />
     <ClInclude Include="io.h" />
     <ClInclude Include="keyboard.h" />
