Updated ScriptHook to v1.0.350.2b

--- a/EnhancedNativeTrainer/EnhancedNativeTrainer.vcxproj.filters
+++ b/EnhancedNativeTrainer/EnhancedNativeTrainer.vcxproj.filters
@@ -45,4 +45,7 @@
     <None Include="Documents\GTA V Peds Master.xlsm" />
     <None Include="Documents\GTA V Vehicles Master.xlsm" />
   </ItemGroup>
+  <ItemGroup>
+    <Library Include="lib\ScriptHookV.lib" />
+  </ItemGroup>
 </Project>
