--- a/EnhancedNativeTrainer/EnhancedNativeTrainer.vcxproj
+++ b/EnhancedNativeTrainer/EnhancedNativeTrainer.vcxproj
@@ -15,6 +15,7 @@
     <ClCompile Include="src\features\anims.cpp" />
     <ClCompile Include="src\features\time.cpp" />
     <ClCompile Include="src\io\config_io.cpp" />
+    <ClCompile Include="src\io\xinput.cpp" />
     <ClCompile Include="src\storage\database.cpp" />
     <ClCompile Include="src\debug\debuglog.cpp" />
     <ClCompile Include="inc\sqlite3\sqlite3.c" />
@@ -36,6 +37,7 @@
     <ClInclude Include="src\features\anims.h" />
     <ClInclude Include="src\features\time.h" />
     <ClInclude Include="src\io\config_io.h" />
+    <ClInclude Include="src\io\xinput.h" />
     <ClInclude Include="src\storage\database.h" />
     <ClInclude Include="src\debug\debuglog.h" />
     <ClInclude Include="inc\main.h" />
