--- a/EnhancedNativeTrainer/EnhancedNativeTrainer.vcxproj.filters
+++ b/EnhancedNativeTrainer/EnhancedNativeTrainer.vcxproj.filters
@@ -20,6 +20,7 @@
     <ClCompile Include="src\io\config_io.cpp" />
     <ClCompile Include="src\features\script.cpp" />
     <ClCompile Include="src\features\time.cpp" />
+    <ClCompile Include="src\io\xinput.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="inc\main.h" />
@@ -43,6 +44,7 @@
     <ClInclude Include="src\io\config_io.h" />
     <ClInclude Include="src\features\script.h" />
     <ClInclude Include="src\features\time.h" />
+    <ClInclude Include="src\io\xinput.h" />
   </ItemGroup>
   <ItemGroup>
     <Xml Include="ent-config.xml" />
