--- a/EnhancedNativeTrainer/EnhancedNativeTrainer.vcxproj.filters
+++ b/EnhancedNativeTrainer/EnhancedNativeTrainer.vcxproj.filters
@@ -21,6 +21,7 @@
     <ClCompile Include="src\features\script.cpp" />
     <ClCompile Include="src\features\time.cpp" />
     <ClCompile Include="src\io\xinput.cpp" />
+    <ClCompile Include="inc\xinput\CXBOXController.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="inc\main.h" />
@@ -45,6 +46,7 @@
     <ClInclude Include="src\features\script.h" />
     <ClInclude Include="src\features\time.h" />
     <ClInclude Include="src\io\xinput.h" />
+    <ClInclude Include="inc\xinput\CXBOXController.h" />
   </ItemGroup>
   <ItemGroup>
     <Xml Include="ent-config.xml" />
