--- a/EnhancedNativeTrainer/EnhancedNativeTrainer.vcxproj
+++ b/EnhancedNativeTrainer/EnhancedNativeTrainer.vcxproj
@@ -57,6 +57,7 @@
     <ClInclude Include="src\features\vehicles.h" />
     <ClInclude Include="src\features\weapons.h" />
     <ClInclude Include="src\features\world.h" />
+    <ClInclude Include="src\version.h" />
   </ItemGroup>
   <ItemGroup>
     <Xml Include="ent-config.xml">
