Prop spawner prototype

--- a/EnhancedNativeTrainer/EnhancedNativeTrainer.vcxproj.filters
+++ b/EnhancedNativeTrainer/EnhancedNativeTrainer.vcxproj.filters
@@ -25,6 +25,7 @@
     <ClCompile Include="src\utils.cpp" />
     <ClCompile Include="src\features\misc.cpp" />
     <ClCompile Include="src\features\hotkeys.cpp" />
+    <ClCompile Include="src\features\props.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="inc\main.h" />
@@ -50,14 +51,11 @@
     <ClInclude Include="src\io\xinput.h" />
     <ClInclude Include="inc\xinput\CXBOXController.h" />
     <ClInclude Include="src\version.h" />
-    <ClInclude Include="\\rob-pc\Shared\Shook\ScriptHookV_SDK_1.0.372.2a\inc\types.h" />
-    <ClInclude Include="\\rob-pc\Shared\Shook\ScriptHookV_SDK_1.0.372.2a\inc\enums.h" />
-    <ClInclude Include="\\rob-pc\Shared\Shook\ScriptHookV_SDK_1.0.372.2a\inc\main.h" />
-    <ClInclude Include="\\rob-pc\Shared\Shook\ScriptHookV_SDK_1.0.372.2a\inc\nativeCaller.h" />
     <ClInclude Include="src\utils.h" />
     <ClInclude Include="resource.h" />
     <ClInclude Include="src\features\misc.h" />
     <ClInclude Include="src\features\hotkeys.h" />
+    <ClInclude Include="src\features\props.h" />
   </ItemGroup>
   <ItemGroup>
     <Xml Include="ent-config.xml" />
