--- a/EnhancedNativeTrainer/EnhancedNativeTrainer.vcxproj
+++ b/EnhancedNativeTrainer/EnhancedNativeTrainer.vcxproj
@@ -16,6 +16,7 @@
     <ClCompile Include="src\features\anims.cpp" />
     <ClCompile Include="src\features\hotkeys.cpp" />
     <ClCompile Include="src\features\misc.cpp" />
+    <ClCompile Include="src\features\props.cpp" />
     <ClCompile Include="src\features\time.cpp" />
     <ClCompile Include="src\io\config_io.cpp" />
     <ClCompile Include="src\io\xinput.cpp" />
@@ -40,6 +41,7 @@
     <ClInclude Include="inc\xinput\CXBOXController.h" />
     <ClInclude Include="src\features\airbrake.h" />
     <ClInclude Include="src\features\anims.h" />
+    <ClInclude Include="src\features\props.h" />
     <ClInclude Include="src\features\hotkeys.h" />
     <ClInclude Include="src\features\time.h" />
     <ClInclude Include="src\io\config_io.h" />
@@ -64,10 +66,6 @@
     <ClInclude Include="src\features\world.h" />
     <ClInclude Include="src\utils.h" />
     <ClInclude Include="src\version.h" />
-    <ClInclude Include="\\rob-pc\Shared\Shook\ScriptHookV_SDK_1.0.372.2a\inc\enums.h" />
-    <ClInclude Include="\\rob-pc\Shared\Shook\ScriptHookV_SDK_1.0.372.2a\inc\main.h" />
-    <ClInclude Include="\\rob-pc\Shared\Shook\ScriptHookV_SDK_1.0.372.2a\inc\nativeCaller.h" />
-    <ClInclude Include="\\rob-pc\Shared\Shook\ScriptHookV_SDK_1.0.372.2a\inc\types.h" />
   </ItemGroup>
   <ItemGroup>
     <Xml Include="ent-config.xml">
