--- a/EnhancedNativeTrainer/EnhancedNativeTrainer.vcxproj
+++ b/EnhancedNativeTrainer/EnhancedNativeTrainer.vcxproj
@@ -16,6 +16,7 @@
     <ClCompile Include="src\features\anims.cpp" />
     <ClCompile Include="src\features\hotkeys.cpp" />
     <ClCompile Include="src\features\misc.cpp" />
+    <ClCompile Include="src\features\neonlightsmenu.cpp" />
     <ClCompile Include="src\features\props.cpp" />
     <ClCompile Include="src\features\time.cpp" />
     <ClCompile Include="src\io\config_io.cpp" />
