Vehicle Neon Lights
Added vehicle neon lights menu.

Reworked how the vehicle menu gets built. There was a funky for loop in
there that made things complicated for anyone trying to rework those
menu items.

Fixed some weird menu leaf definitions (items that should have been
leafs were showing up with >> arrows)

--- a/EnhancedNativeTrainer/EnhancedNativeTrainer.vcxproj.filters
+++ b/EnhancedNativeTrainer/EnhancedNativeTrainer.vcxproj.filters
@@ -714,6 +714,9 @@
     <ClCompile Include="src\features\props.cpp">
       <Filter>Source Files\src</Filter>
     </ClCompile>
+    <ClCompile Include="src\features\neonlightsmenu.cpp">
+      <Filter>Source Files\src</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <Xml Include="ent-config.xml">
