--- a/EnhancedNativeTrainer/EnhancedNativeTrainer.vcxproj
+++ b/EnhancedNativeTrainer/EnhancedNativeTrainer.vcxproj
@@ -17,6 +17,7 @@
     <ClCompile Include="src\features\hotkeys.cpp" />
     <ClCompile Include="src\features\misc.cpp" />
     <ClCompile Include="src\features\neonlightsmenu.cpp" />
+    <ClCompile Include="src\features\propplacement.cpp" />
     <ClCompile Include="src\features\props.cpp" />
     <ClCompile Include="src\features\time.cpp" />
     <ClCompile Include="src\io\config_io.cpp" />
@@ -44,6 +45,7 @@
     <ClInclude Include="src\ent-enums.h" />
     <ClInclude Include="src\features\airbrake.h" />
     <ClInclude Include="src\features\anims.h" />
+    <ClInclude Include="src\features\propplacement.h" />
     <ClInclude Include="src\features\props.h" />
     <ClInclude Include="src\features\hotkeys.h" />
     <ClInclude Include="src\features\time.h" />
